<resources>
    <string name="app_name">Asgn 1</string>
    <string name="name">Kevin Wang</string>
    <string name="bio">
        I\'m currently an undergraduate student who is working to earn his bachelor\'s degree
        in Computer Science. I\'m hoping to graduate this quarter along with the rest of my
        colleagues from Crown College. I was born and raised in California by my immigrant Chinese
        parents.</string>


    <!-- Activity Strings -->
    <string name="activity_gaming">Gaming</string>
    <string name="gaming">
        Video games are a fun and easy way for me to blow off steam and de-stress.
        However, not all video games are created equal. I for one, dislike Fortnite.
        I also must admit that video games have been the source of procrastination many times.</string>

    <string name="activity_cooking">Cooking</string>
    <string name="cooking">
        I picked up cooking by helping my mother around the kitchen when I was a child.
        Soon, I began trying new online recipes and found a new passion.
        The best part is I really enjoy eating and trying new foods as well.</string>

    <string name="activity_skiing">Skiing</string>
    <string name="skiing">
        Once every year, my family takes a trip to Tahoe where we spend a weekend skiing.
        I started skiing when I was six and have loved it ever since.
        Not only is it exciting, the view from the peak is amazing as well.</string>

    <!-- Activity Navigation -->
    <string name="exit_activity">Exit</string>
    <string name="return_activity">OK</string>
    <string name="delete_activity">DELETE</string>
</resources>
