<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/menuName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="About Me:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/menuBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bio"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonGaming"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:text="@string/activity_gaming"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonCooking"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:text="@string/activity_cooking"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSkiing"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:text="@string/activity_skiing"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/exit_activity"
        android:textSize="40sp" />
</LinearLayout>