<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="	#FF6347"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/activity_skiing"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:src="@mipmap/skiing"
        android:scaleType="fitCenter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/skiing"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/delete_activity"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginBottom="16dp"
        android:text="@string/return_activity"
        android:textSize="40sp"
        android:textStyle="bold" />


</LinearLayout>